  * Replace internal libdts 0.0.2 with libdca 0.0.5, and contextually move it
    to contrib/libdca to separate from xine's own code.
  * Add another message code to allow for auth prompts. Previously, it was
    not possible to distinguish between 401 Authentication Requried and 403
    Forbidden.
  * Merge the demuxer and the decoder for NSF files in a combined plugin.

xine-lib (1.1.7) (unreleased)
  * Support libdca (new name for libdts) by shuffling around the dts.h file.
  * Add support for MDHD version 1 atom in demux_qt. [bug #1679398]
  * Handle single-quoted attribute values in XML.
  * Fix default paths for RealPlayer libraries (broken in 1.1.5).
    [Bug 1707526]
  * Fix proxy usage when the hostnames cannot be resolved. Thanks to Jeff
    Mitchell for reporting and testing the fix.
  * Avoid zero-sized frames when demuxing MPEG PES.
  * Improved MPEG2 detection and optimised processing.
  * Extract AFD information (commonly used in UK DVB-T) from the MPEG stream.
  * Ensure that the ffmpeg video image size is properly initialised.
  * Allow XxMC to switch back to software decoding; don't deinterlace if it's
    not needed for any given frame.
  * Document dvba: MRLs (ATSC with full tuning info).
  * Fix VCD playback (broken since 1.1.4).
  * Fix demuxing of FLAC files with ID3v2 tags.
  * Use the integer versions of Speex decoding functions, this avoids an
    iteration over the decoded frames to transform them to integers, and
    also avoids an improper saturation.

xine-lib (1.1.6)
  * Split the DirectFB plugin into X11 and non-X versions.
  * Improve the Mac OS X video output plugin. Thanks to Matt Messier.
  * Fixed the XcbXv plugin - an empty plugin would be built if "old" Xv
    isn't detected.
  * Reworked the channels.conf file handling in the DVB plugin. Previously,
    with junk content, the plugin could potentially consume lots of memory
    (possibly causing a local DoS). Also, a few small memory leaks have been
    eliminated.